2004-09-04 01:34  Alexander Malmberg <alexander@malmberg.org>

	* PrinterTypes/GNUmakefile, PrinterTypes/GNUmakefile.postamble:
	Revert removal of rules to install .ppd:s.
	* PrinterTypes/English.lproj/Generic-PostScript_Printer-Postscript.ppd:
	New file.
	* Printing/GSLPR/GNUmakefile: Set GNUSTEP_INSTALLATION_DIR.
	* Printing/GSLPR/GNUmakefile.preamble: Compile with -Wall.
	* Printing/GSLPR/GSLPRPrinter.m (+printerWithName:): Remove
	ppdContents variable.
	(+printersDictionary): Only warn once if a printer hasn't been set
	in the defaults. Change the type of the fallback printer to
	Generic-PostScript_Printer-Postscript. Check that the ppd for this
	printer is found.

2004-09-04 01:06  Alexander Malmberg <alexander@malmberg.org>

	* Source/GSToolbarView.m (-_insertionIndexAtPoint:): Remove spurious
	';'.

2004-09-02  Quentin Mathe <qmathe@club-internet.fr>
        
	* Headers/AppKit/NSToolbarItem.h: Added GSMovableToolbarPboardType 
	declaration.
	* Source/NSToolbarItem.m: Added the toolbar items rearranging possibility by 
	implementing the dragging source methods.
	* Source/GSToolbar.m: Added or reworked some methods to support model updates
	without direct view effects to manipulate the toolbar items when a dragging 
	session happens.
	* Source/GSToolbarView.m: Added the toolbar items rearranging possibility by 
	implementing the dragging destination methods. And added a method to 
	support the insertion index calculation based on the mouse location.

2004-09-01  Adam Fedor  <fedor@gnu.org>

	* Source/NSPrintInfo.m ([NSPrintInfo -paperSize]): Avoid returning
	a nil object return value into a struct.

	* Printing/GSLPR/GNUmakefile.preamble: Add 
	Source/$(GNUSTEP_TARGET_DIR) includes
	* Tools/GNUmakefile.preamble: Likewise.

2004-09-02 00:17  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSView.m (-replaceSubview:with:): Clarify documentation.
	(-scrollRectToVisible:): Implement correctly, patch from Andrew
	Ruder. Document.
